--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
 html {
     background-color: #C1ECFA;
     background-image: url(clouds.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-blend-mode: color-burn;
+    background-position: center center;
+    background-size: cover;
 }
 
 article {
     display: flex;
     justify-content: space-evenly;
     align-items: stretch;
-    margin: auto 5em;
+    margin: auto auto;
     flex-flow: wrap;
 }
 
 section {
     width: 25em;
-    margin: 1em auto;
+    margin: 1em 1em;
+    padding: 0 1em;
+    background-color: #C1ECFA;
+}
+
+h1 {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    /* font-weight: 600; */
+    color: #3D3C3A;
 }
 
 body>h1 {
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
     text-align: center;
 }
 
-h1,
 p {
+    font-family: 'Fira Sans', sans-serif;
     color: #3D3C3A;
+    text-align: justify;
 }
