--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
     background-image: url(clouds.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-blend-mode: color-burn;
+    background-blend-mode: overlay;
     background-position: center center;
     background-size: cover;
 }
@@ -25,7 +25,7 @@ section {
 
 h1 {
     font-family: 'Fira Sans Condensed', sans-serif;
-    /* font-weight: 600; */
+    font-weight: 600;
     color: #3D3C3A;
 }
 
@@ -35,7 +35,7 @@ body>h1 {
 }
 
 p {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Merriweather', serif;
     color: #3D3C3A;
     text-align: justify;
 }
